--- a/ApolloArchery/app/src/main/res/values/colors.xml
+++ b/ApolloArchery/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red_900">#974A44</color>
-    <color name="red_lite">#FD1B14</color>
+    <color name="red_700">#BD645E</color>
+    <color name="red">#FD1B14</color>
     <color name="yellow">#FEF435</color>
-    <color name="blue">#41B7C8</color>
+    <color name="blue_300">#41B7C8</color>
     <color name="red_300">#EADFDF</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
 </resources>
