--- a/ApolloArchery/app/src/main/res/layout/fragment_login.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/login_screen"
-        android:layout_width="409dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
