--- a/ApolloArchery/app/src/main/res/layout/fragment_main.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_main.xml
@@ -24,7 +24,7 @@
         android:layout_width="134dp"
         android:layout_height="123dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="82dp"
         android:layout_marginEnd="40dp"
         android:clickable="true"
         android:contentDescription="@string/profile_main_btn"
@@ -52,16 +52,14 @@
         android:id="@+id/sitemarks_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="47dp"
         android:clickable="true"
+        android:contentDescription="@string/site_mark_btn"
+        android:focusable="true"
         android:src="@drawable/sitemark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/arrow_counter_btn"
-        app:layout_constraintTop_toBottomOf="@+id/profile_btn_main"
-        android:contentDescription="@string/site_mark_btn"
-        android:focusable="true" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_btn_main" />
 
     <TextView
         android:id="@+id/new_round_label"
@@ -78,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="89dp"
+        android:layout_marginEnd="86dp"
         android:text="@string/profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_btn_main" />
@@ -107,11 +105,13 @@
         android:id="@+id/arrow_count_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginEnd="177dp"
         android:layout_marginBottom="8dp"
         android:text="@string/_000"
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/arrows_shot_label"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -122,6 +122,7 @@
         android:layout_marginEnd="149dp"
         android:layout_marginBottom="46dp"
         android:text="@string/arrows_shot_today"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
