--- a/ApolloArchery/app/src/main/res/layout/fragment_round_setup.xml
+++ b/ApolloArchery/app/src/main/res/layout/fragment_round_setup.xml
@@ -99,4 +99,18 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/arrow_spinner" />
+
+    <Button
+        android:id="@+id/start_round_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="136dp"
+        android:text="@string/start_round_btn"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rules_selection_spinner"
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
